--- a/gobyexample/routine/README
+++ b/gobyexample/routine/README
@@ -23,3 +23,13 @@ Although not necessary, for readability the channel name usually starts with ch 
 Don’t use print statements to indicate the order of sending to and receiving from a channel: this could be out of order with what actually happens due to the time lag between the print statement and the actual channel sending and receiving.
 
 But design your algorithm in the first place with unbuffered channels, and only introduce buffering when the former is problematic.
+
+空间换时间
+Since the number of items in the container is generally known, it makes sense to use a channel with enough capacity to hold all the items. This way, the iterator will never block (though the consumer goroutine still might). However, this effectively doubles the amount of memory required to iterate over any given container, so channel capacity should be limited to some maximum number. Timing or benchmarking your code will help you find the buffer capacity for minimal memory usage and optimal performance.
+
+Thus not only performance is a major advantage, but the clearer and more elegant code is perhaps an even bigger advantage. It is certainly a Go idiomatic way of working:
+IDIOM: Use an in- and out-channel instead of locking
+
+For any problem which can be modeled as such a Master-Worker paradigm, an analogous solution with Workers as goroutines communicating through channels and the Master as coordinator would be a perfect fit. If the system distributes over several machines, a number of machines could execute the Worker goroutines, and the Master and Workers could communicate amongst themselves through netchan or rpc (see chapter 15).
+
+tail recursion
